# module32

./: CMakeLists.txt  ex3.pb.cc  ex3.pb.h  ex3.proto  films.json
include/: module32.h
src/: CMakeLists.txt  module32.cpp
